# switchbox-sdk-python

./: .coverage  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
switchbox/: __init__.py  cache.py  client.py  evaluator.py  exceptions.py  models.py  sync.py
tests/: parity_vectors.json  test_cache.py  test_client.py  test_contract_fixtures.py  test_evaluator.py  test_models.py  test_parity_vectors.py
tests/fixtures/cdn-json/: defaults.json  empty.json  full_config.json  legacy_flat_rules.json  unknown_fields.json
tests/fixtures/parity/: parity_vectors.json
