[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "switchbox-flags"
version = "0.1.0"
description = "Feature flag SDK with zero dependencies"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [{ name = "Switchbox" }]
keywords = ["feature-flags", "feature-toggles", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/ignat14/switchbox-sdk-python"
Repository = "https://github.com/ignat14/switchbox-sdk-python"
Issues = "https://github.com/ignat14/switchbox-sdk-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["switchbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.4"]
